zendao/service.yaml
kind: Service
apiVersion: v1
metadata:
  labels:
    apps: zendao
  name: zendao
  namespace: develop
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
  selector:
    app: zendao
